[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/bg.png" type="Texture" id=1]
[ext_resource path="res://assets/header_ninePatch.png" type="Texture" id=2]
[ext_resource path="res://assets/bg_ninePatch.png" type="Texture" id=3]
[ext_resource path="res://assets/header_bg.png" type="Texture" id=4]
[ext_resource path="res://assets/MinecraftRegular-Bmg3.otf" type="DynamicFontData" id=5]
[ext_resource path="res://src/create/SequencedAssembly/elements/recipeView.gd" type="Script" id=6]
[ext_resource path="res://assets/closeBtnFrames.png" type="Texture" id=7]
[ext_resource path="res://src/create/SequencedAssembly/elements/save_dialog.gd" type="Script" id=8]
[ext_resource path="res://src/create/SequencedAssembly/elements/warningPopUp.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/create/SequencedAssembly/signalScripts/fileEdit.gd" type="Script" id=10]
[ext_resource path="res://src/create/SequencedAssembly/elements/savePopup.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/themes/BtnTheme.tres" type="Theme" id=12]
[ext_resource path="res://assets/themes/LineEdit.tres" type="Theme" id=13]
[ext_resource path="res://assets/themes/scroll_bar_theme.tres" type="Theme" id=14]
[ext_resource path="res://assets/bg_blueprint_scrollbar_transparent.png" type="Texture" id=15]

[sub_resource type="InputEventKey" id=1]
scancode = 16777217

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 52, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 26, 0, 26, 26 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 20
extra_spacing_top = -3
extra_spacing_bottom = -3
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
warn = ExtResource( 11 )
warnName = ExtResource( 9 )

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )

[node name="RecipeWindow" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="RecipeWindow"]
margin_right = 1024.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="NinePatchRect" type="NinePatchRect" parent="RecipeWindow/HBoxContainer"]
margin_right = 998.0
margin_bottom = 26.0
size_flags_horizontal = 3
texture = ExtResource( 2 )
draw_center = false
region_rect = Rect2( 0, 0, 16, 10 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="RecipeWindow/HBoxContainer/NinePatchRect"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseBtn" type="TextureButton" parent="RecipeWindow/HBoxContainer"]
margin_left = 998.0
margin_right = 1024.0
margin_bottom = 26.0
rect_min_size = Vector2( 26, 26 )
hint_tooltip = "Close"
focus_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 2 )
texture_normal = SubResource( 3 )
texture_pressed = SubResource( 4 )
texture_hover = SubResource( 5 )
texture_disabled = SubResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="RecipeWindow"]
margin_top = 26.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="RecipeBoundry" type="NinePatchRect" parent="RecipeWindow/HBoxContainer2"]
margin_right = 1024.0
margin_bottom = 574.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 12, 12 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="TextureRect" parent="RecipeWindow/HBoxContainer2/RecipeBoundry"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="RecipeWindow/HBoxContainer2/RecipeBoundry"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dud" type="Control" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer"]
margin_right = 16.0
margin_bottom = 574.0
rect_min_size = Vector2( 16, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer"]
margin_left = 16.0
margin_right = 1008.0
margin_bottom = 574.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="dud" type="Control" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer"]
margin_right = 992.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )

[node name="HBoxContainer" type="HBoxContainer" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 992.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="TextEdit" type="Label" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 294.0
margin_bottom = 22.0
rect_min_size = Vector2( 294, 0 )
custom_fonts/font = SubResource( 6 )
text = "File name (without extension):"

[node name="dud3" type="Control" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 294.0
margin_right = 310.0
margin_bottom = 24.0
rect_min_size = Vector2( 16, 0 )

[node name="fileName" type="LineEdit" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 310.0
margin_right = 802.0
margin_bottom = 24.0
rect_min_size = Vector2( 384, 0 )
size_flags_horizontal = 3
theme = ExtResource( 13 )
custom_fonts/font = SubResource( 7 )
script = ExtResource( 10 )
warnPopUp = ExtResource( 9 )

[node name="dud4" type="Control" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 802.0
margin_right = 992.0
margin_bottom = 24.0
rect_min_size = Vector2( 190, 0 )

[node name="dud4" type="Control" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 992.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 4 )

[node name="HBoxContainer2" type="HBoxContainer" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 992.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="TextEdit2" type="Label" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_top = 4.0
margin_right = 294.0
margin_bottom = 24.0
rect_min_size = Vector2( 294, 0 )
custom_fonts/font = SubResource( 6 )
text = "File path:"

[node name="dud3" type="Control" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 294.0
margin_right = 310.0
margin_bottom = 28.0
rect_min_size = Vector2( 16, 0 )

[node name="filePath" type="LineEdit" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 310.0
margin_right = 802.0
margin_bottom = 28.0
rect_min_size = Vector2( 384, 0 )
focus_neighbour_left = NodePath("../../HBoxContainer/fileName")
focus_neighbour_top = NodePath("../../HBoxContainer/fileName")
focus_previous = NodePath("../../HBoxContainer/fileName")
size_flags_horizontal = 3
theme = ExtResource( 13 )
custom_fonts/font = SubResource( 7 )
editable = false
script = ExtResource( 10 )
warnPopUp = ExtResource( 9 )

[node name="dud" type="Control" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 802.0
margin_right = 818.0
margin_bottom = 28.0
rect_min_size = Vector2( 16, 0 )

[node name="Button" type="Button" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 818.0
margin_right = 992.0
margin_bottom = 28.0
focus_mode = 0
theme = ExtResource( 12 )
custom_fonts/font = SubResource( 8 )
enabled_focus_mode = 0
text = "Select Directory"

[node name="dud3" type="Control" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 992.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 4 )

[node name="recipe" type="TextEdit" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 992.0
margin_bottom = 526.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 14 )
custom_fonts/font = SubResource( 9 )
custom_colors/code_folding_color = Color( 0, 0, 0, 1 )
custom_colors/symbol_color = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_colors/selection_color = Color( 1, 1, 1, 0.294118 )
custom_colors/caret_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.678431, 0.678431, 0.678431, 1 )
custom_colors/line_number_color = Color( 0, 0, 0, 1 )
custom_colors/current_line_color = Color( 1, 1, 1, 0.207843 )
custom_colors/word_highlighted_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_readonly = Color( 0, 0, 0, 1 )
readonly = true
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
highlight_all_occurrences = true
smooth_scrolling = true
hiding_enabled = true

[node name="NinePatchRect" type="NinePatchRect" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer/recipe"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 15 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dud5" type="Control" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer"]
margin_top = 526.0
margin_right = 992.0
margin_bottom = 530.0
rect_min_size = Vector2( 0, 4 )

[node name="Button2" type="Button" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer"]
margin_top = 530.0
margin_right = 992.0
margin_bottom = 558.0
focus_mode = 0
theme = ExtResource( 12 )
custom_fonts/font = SubResource( 8 )
enabled_focus_mode = 0
text = "Save file"

[node name="dud2" type="Control" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer"]
margin_top = 558.0
margin_right = 992.0
margin_bottom = 574.0
rect_min_size = Vector2( 0, 16 )

[node name="dud2" type="Control" parent="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer"]
margin_left = 1008.0
margin_right = 1024.0
margin_bottom = 574.0
rect_min_size = Vector2( 16, 0 )

[node name="FileDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 128.0
margin_top = 64.0
margin_right = -128.0
margin_bottom = -64.0
theme = ExtResource( 12 )
custom_colors/folder_icon_modulate = Color( 0.74902, 0.603922, 0.266667, 1 )
custom_colors/files_disabled = Color( 0.819608, 0.647059, 0.360784, 1 )
custom_colors/file_icon_modulate = Color( 0.341176, 0.160784, 0, 1 )
window_title = "Open a Directory"
mode = 2
access = 2
show_hidden_files = true
current_dir = "/gitFork/SARM/SARM"
current_path = "/gitFork/SARM/SARM/"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="RecipeWindow/HBoxContainer/CloseBtn" to="." method="close"]
[connection signal="text_changed" from="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer/HBoxContainer/fileName" to="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer/HBoxContainer/fileName" method="textChanged"]
[connection signal="text_changed" from="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer/HBoxContainer2/filePath" to="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer/HBoxContainer2/filePath" method="textChanged"]
[connection signal="pressed" from="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer/HBoxContainer2/Button" to="." method="openSaveFile"]
[connection signal="pressed" from="RecipeWindow/HBoxContainer2/RecipeBoundry/HBoxContainer/VBoxContainer/Button2" to="." method="Save"]
[connection signal="SendDir" from="FileDialog" to="." method="save_file"]
[connection signal="dir_selected" from="FileDialog" to="FileDialog" method="_on_FileDialog_dir_selected"]
